Exercise 1 - Free Geo IP

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,25 @@ atlassian*
 !/var/.htaccess
 /vendor
 !/vendor/.htaccess
+
+app/code/Magento/BundleSampleData
+app/code/Magento/CatalogRuleSampleData
+app/code/Magento/CatalogSampleData
+app/code/Magento/CmsSampleData
+app/code/Magento/ConfigurableSampleData
+app/code/Magento/CustomerSampleData
+app/code/Magento/DownloadableSampleData
+app/code/Magento/GroupedProductSampleData
+app/code/Magento/MsrpSampleData
+app/code/Magento/OfflineShippingSampleData
+app/code/Magento/ProductLinksSampleData
+app/code/Magento/ReviewSampleData
+app/code/Magento/SalesRuleSampleData
+app/code/Magento/SalesSampleData
+app/code/Magento/SwatchesSampleData
+app/code/Magento/TaxSampleData
+app/code/Magento/ThemeSampleData
+app/code/Magento/WidgetSampleData
+app/code/Magento/WishlistSampleData
+dev/tests/integration/testsuite/Magento/SampleData
+dev/tools/build-sample-data.php
